samples/java/jniviewer/jni/OcctJni_Window.hxx
@@ -27,36 +27,39 @@ public:
   : myWidth (theWidth), myHeight(theHeight) {}
 
   //! Returns native Window handle
-  virtual Aspect_Drawable NativeHandle() const { return 0; }
+  virtual Aspect_Drawable NativeHandle() const Standard_OVERRIDE { return 0; }
 
   //! Returns parent of native Window handle
-  virtual Aspect_Drawable NativeParentHandle() const { return 0; }
+  virtual Aspect_Drawable NativeParentHandle() const Standard_OVERRIDE { return 0; }
+
+  //! Returns nothing on Android
+  virtual Aspect_FBConfig NativeFBConfig() const Standard_OVERRIDE { return 0; }
 
   virtual void Destroy() {}
 
   //! Opens the window <me>
-  virtual void Map() const {}
+  virtual void Map() const Standard_OVERRIDE {}
 
   //! Closes the window <me>
-  virtual void Unmap() const {}
+  virtual void Unmap() const Standard_OVERRIDE {}
 
   //! Applies the resizing to the window <me>
-  virtual Aspect_TypeOfResize DoResize() const { return Aspect_TOR_UNKNOWN; }
+  virtual Aspect_TypeOfResize DoResize() const Standard_OVERRIDE { return Aspect_TOR_UNKNOWN; }
 
   //! Apply the mapping change to the window <me>
-  virtual Standard_Boolean DoMapping() const { return Standard_True; }
+  virtual Standard_Boolean DoMapping() const Standard_OVERRIDE { return Standard_True; }
 
   //! Returns True if the window <me> is opened
-  virtual Standard_Boolean IsMapped() const { return Standard_True; }
+  virtual Standard_Boolean IsMapped() const Standard_OVERRIDE { return Standard_True; }
 
   //! Returns The Window RATIO equal to the physical WIDTH/HEIGHT dimensions
-  virtual Quantity_Ratio Ratio() const { return 1.0; }
+  virtual Quantity_Ratio Ratio() const Standard_OVERRIDE { return 1.0; }
 
   //! Returns The Window POSITION in PIXEL
   virtual void Position (Standard_Integer& theX1,
                          Standard_Integer& theY1,
                          Standard_Integer& theX2,
-                         Standard_Integer& theY2) const
+                         Standard_Integer& theY2) const Standard_OVERRIDE
   {
     theX1 = 0;
     theX2 = myWidth;
@@ -65,10 +68,10 @@ public:
   }
 
   //! Set The Window POSITION in PIXEL
-  virtual void SetPosition (const Standard_Integer theX1,
-                            const Standard_Integer theY1,
-                            const Standard_Integer theX2,
-                            const Standard_Integer theY2)
+  void SetPosition (const Standard_Integer theX1,
+                    const Standard_Integer theY1,
+                    const Standard_Integer theX2,
+                    const Standard_Integer theY2)
   {
     myWidth  = theX2 - theX1;
     myHeight = theY2 - theY1;
@@ -76,15 +79,15 @@ public:
 
   //! Returns The Window SIZE in PIXEL
   virtual void Size (Standard_Integer& theWidth,
-                     Standard_Integer& theHeight) const
+                     Standard_Integer& theHeight) const Standard_OVERRIDE
   {
     theWidth  = myWidth;
     theHeight = myHeight;
   }
 
   //! Set The Window SIZE in PIXEL
-  virtual void SetSize (const Standard_Integer theWidth,
-                        const Standard_Integer theHeight)
+  void SetSize (const Standard_Integer theWidth,
+                const Standard_Integer theHeight)
   {
     myWidth  = theWidth;
     myHeight = theHeight;
